src/test/ui/rfc-2497-if-let-chains/issue-93150.stderr
error[E0658]: `if let` guards are experimental
  --> $DIR/issue-93150.rs:3:11
   |
LL |         _ if let true = true && true => {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #51114 <https://github.com/rust-lang/rust/issues/51114> for more information
   = help: add `#![feature(if_let_guard)]` to the crate attributes to enable
   = help: you can write `if matches!(<expr>, <pattern>)` instead of `if let <pattern> = <expr>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
