src/test/ui/rfc-2497-if-let-chains/issue-93150.rs
fn main() {
    match true {
        _ if let true = true && true => {}
        //~^ ERROR `if let` guards are
        //~| ERROR `let` expressions in this
        _ => {}
    }
}
